force-app/commons/triggerHandler/objects/LogicSwitch__c/LogicSwitch__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Logic Switch</label>
</CustomObject>