force-app/commons/triggerHandler/objects/LogicSwitch__c/fields/DisableActions__c.field-meta.xml
<CustomField>
    <fullName>DisableActions__c</fullName>
    <inlineHelpText>New space separated list of Trigger Action class names</inlineHelpText>
    <label>Disabled Actions</label>
    <type>TextArea</type>
</CustomField>