force-app/commons/triggerHandler/objects/LogicSwitch__c/fields/DisabledActions2__c.field-meta.xml
<CustomField>
    <fullName>DisabledActions2__c</fullName>
    <inlineHelpText>New space separated list of Trigger Action class names</inlineHelpText>
    <label>Disabled Actions Part 2</label>
    <type>TextArea</type>
</CustomField>