force-app/commons/triggerHandler/objects/LogicSwitch__c/fields/DisableFlows__c.field-meta.xml
<CustomField>
    <fullName>DisableFlows__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables all flows that reference this setting in Entry Criteria.</inlineHelpText>
    <label>Disable Flows</label>
    <type>Checkbox</type>
</CustomField>