force-app/commons/triggerHandler/objects/LogicSwitch__c/fields/DisableProcessBuilders__c.field-meta.xml
<CustomField>
    <fullName>DisableProcessBuilders__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables all Process Builders that reference this setting in entry criteria.</inlineHelpText>
    <label>Disable Process Builders</label>
    <type>Checkbox</type>
</CustomField>