force-app/commons/triggerHandler/objects/LogicSwitch__c/fields/DisableSelectedTriggers__c.field-meta.xml
<CustomField>
    <fullName>DisableSelectedTriggers__c</fullName>
    <inlineHelpText>Disables selected triggers. This accepts &quot;SObjectName&quot; format and &quot;SObjectName.OperationTrigger&quot;.
Examples:
&quot;Account&quot;, &quot;Account.BEFORE_INSERT&quot;, &quot;Account.AFTER_UPDATE&quot;</inlineHelpText>
    <label>Disable Selected Triggers</label>
    <type>TextArea</type>
</CustomField>