force-app/commons/triggerHandler/objects/LogicSwitch__c/fields/DisableTriggers__c.field-meta.xml
<CustomField>
    <fullName>DisableTriggers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disable all triggers.</inlineHelpText>
    <label>Disable Triggers</label>
    <type>Checkbox</type>
</CustomField>