force-app/commons/triggerHandler/objects/LogicSwitch__c/fields/DisableValidationRules__c.field-meta.xml
<CustomField>
    <fullName>DisableValidationRules__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables all Validation Rules. Validation Rules must incorporate this setting.</inlineHelpText>
    <label>Disable Validation Rules</label>
    <type>Checkbox</type>
</CustomField>