force-app/commons/triggerHandler/objects/LogicSwitch__c/fields/DisableWorkflowRules__c.field-meta.xml
<CustomField>
    <fullName>DisableWorkflowRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Workflow Rules</label>
    <type>Checkbox</type>
</CustomField>